spacing issues resolved and hover effect written and working

--- a/css/style.css
+++ b/css/style.css
@@ -27,6 +27,7 @@ Paragraph default: 1.6
 - Accents:
 - Contrasts:  #59300d (coolors.co)
 - Greys
+  #6f6f6f (lightest grey allowed on #fdf2e9)
   #555
   #333
 
@@ -391,15 +392,22 @@ be behind the photos*/
 /*******************************/
 
 .section-testimonials {
-  padding: 9.6rem 0;
   background-color: #fdf2e9;
+  display: grid;
+  grid-template-columns: 55fr 54fr;
+  align-items: center;
+}
+
+.testimonials-container {
+  padding: 9.6rem;
 }
 
 .testimonials {
   /* creates our two columns */
   display: grid;
   grid-template-columns: 1fr 1fr;
-  gap: 4.8rem;
+  row-gap: 4.8rem;
+  column-gap: 8rem;
 }
 
 .testimonial-img {
@@ -417,7 +425,7 @@ be behind the photos*/
 
 .testimonial-name {
   font-size: 1.6rem;
-  color: #777;
+  color: #6f6f6f;
 }
 
 .gallery {
@@ -425,10 +433,21 @@ be behind the photos*/
   /* 3 equal sized columns */
   grid-template-columns: repeat(3, 1fr);
   gap: 1.6rem;
+  padding: 1.6rem;
+}
+
+/* keeps the gallery images from overflowing onto the other images when hovered on */
+.gallery-item {
+  overflow: hidden;
 }
 
 .gallery-item img {
   /* fixes the white space between images */
   display: block;
   width: 100%;
+  transition: all 0.4s;
+}
+
+.gallery-item img:hover {
+  transform: scale(1.1);
 }
